--- a/07-advanced-retrieval.Rmd
+++ b/07-advanced-retrieval.Rmd
@@ -2,6 +2,43 @@
 
 ## Retrieving data from multiple census years
 
+### Retrieving different census year datasets and placing them as separate elements in a list
+
+```{r, message=F, warning=F}
+my_years<-lst(2000,2010)
+population_rural_2000_2010_list<-map(
+  my_years,
+  ~(get_decennial(geography = "state", 
+                  variables = c("P001001", "P002005"),
+                  output="wide",
+                  year =.)) %>% 
+    mutate(rural_pct=(P002005/P001001)*100) %>% 
+    arrange(NAME)
+)
+
+population_rural_2000_2010_list
+
+population_rural_2000_2010_list %>% pluck("2000")
+```
+
+### Retrieving different census year datasets and placing them in a single data frame
+
+```{r}
+my_years<-lst(2000,2010)
+
+population_rural_2000_2010_df<-map_dfr(
+  my_years,
+  ~(get_decennial(geography = "state", 
+                  variables = c("P001001", "P002005"),
+                  output="wide",
+                  year =.)) %>% 
+    mutate(rural_pct=(P002005/P001001)*100) %>% 
+    arrange(NAME), .id="year"
+)
+
+population_rural_2000_2010_df
+
+```
 
 
 
