adds additional retrieval code

--- a/07-advanced-retrieval.Rmd
+++ b/07-advanced-retrieval.Rmd
@@ -1,5 +1,14 @@
 # Advanced data retrieval
 
+```{r}
+population_rural_CO_UT<-get_decennial(geography = "tract",
+                                      state=c("CO", "UT"),
+                                      variables = c("P001001", "P002005"),
+                                      output="wide",
+                                      year = 2000) 
+```
+
+
 ## Retrieving data from multiple census years
 
 ```{r, error=TRUE}
@@ -13,7 +22,7 @@ population_rural_2000_2010<-get_decennial(geography = "state",
 ### Retrieving different census year datasets and placing them as separate elements in a list
 
 ```{r, message=F, warning=F}
-my_years<-lst(2000,2010)
+my_years<-c(2000,2010)
 census_query<-function(my_years){
   get_decennial(geography = "state", 
                   variables = c("P001001", "P002005"),
@@ -27,21 +36,120 @@ population_rural_2000_2010_list<-map(my_years, census_query)
 
 population_rural_2000_2010_list
 
-population_rural_2000_2010_list %>% pluck("2000")
+population_rural_2000_2010_list %>% pluck(1)
+
+names(population_rural_2000_2010_list)<-my_years
+
+population_rural_2000_2010_list
+
+population_rural_2000_2010_list %>% pluck("2010")
+
+population_rural_2000_2010_list[["2010"]]
+
+population_rural_2000_2010_list %>% pluck(2)
+
+population_rural_2000_2010_list[[2]]
 ```
 
 
 ### Retrieving different census year datasets and placing them in a single data frame
 
 ```{r, message=F, warning=F}
-population_rural_2000_2010_df<-map_dfr(my_years, census_query, .id="year") %>% arrange(GEOID)
+population_rural_2000_2010_df<-map_dfr(my_years, census_query) %>% arrange(GEOID)
 
 population_rural_2000_2010_df
 ```
 
+## Retrieving microgeography data from multiple states
+
+```{r, error=TRUE}
+population_rural_CO_UT<-get_decennial(geography = "tract", 
+                                      state=c("CO","UT"),
+                                      variables = c("P001001", "P002005"),
+                                      output="wide",
+                                      year=2000) %>% 
+                        mutate(rural_pct=(P002005/P001001)*100) %>% 
+                        mutate(year=my_years)                 
+
+```
+
+### List
+
+```{r}
+my_states<-c("CO", "UT")
+population_rural_CO_UT<-function(my_states){
+  get_decennial(geography = "tract", 
+                state=my_states,
+                variables = c("P001001", "P002005"),
+                output="wide",
+                year=2010) %>% 
+    mutate(rural_pct=(P002005/P001001)*100) %>% 
+    mutate(Year=2010) %>% 
+    mutate(STATE=my_states)
+}
 
 
+population_rural_CO_UT_list<-map(my_states, population_rural_CO_UT)
+population_rural_CO_UT_list
+population_rural_CO_UT_list %>% pluck(1)
 
+names(population_rural_CO_UT_list)<-my_states
+
+population_rural_CO_UT_list
+
+population_rural_CO_UT_list %>% pluck("UT")
+```
+
+### df 
+
+```{r}
+population_rural_CO_UT_df<-map_dfr(my_states, population_rural_CO_UT)
+population_rural_CO_UT_df
+```
+
+## Retrieving microgeography data from multiple states AND multiple years  
+
+### List
+
+```{r}
+my_states<-c("CO", "CO", "UT", "UT")
+my_years<-c(2000, 2010, 2000, 2010)
+
+population_rural_CO_UT_2000_2010<-function(my_states, my_years){
+  get_decennial(geography = "tract", 
+                state=my_states,
+                variables = c("P001001", "P002005"),
+                output="wide",
+                year=my_years) %>% 
+    mutate(rural_pct=(P002005/P001001)*100) %>% 
+    mutate(YEAR=my_years) %>% 
+    mutate(STATE=my_states)
+}
+
+population_rural_CO_UT_2000_2010_list<-map2(my_states, my_years, population_rural_CO_UT_2000_2010)
+
+population_rural_CO_UT_2000_2010_list
+
+population_rural_CO_UT_2000_2010_list %>% pluck(2)
+
+name_vector<-paste0(my_states, "_", my_years)
+
+names(population_rural_CO_UT_2000_2010_list)<-name_vector
+
+population_rural_CO_UT_2000_2010_list
+
+population_rural_CO_UT_2000_2010_list %>% pluck("CO_2010")
+```
+
+### df
+
+```{r}
+population_rural_CO_UT_2000_2010_df<-map2_dfr(my_states, my_years, population_rural_CO_UT_2000_2010)
+```
+
+```{r}
+population_rural_CO_UT_2000_2010_df
+```
 
 
 
